# restful-db

./: .gitignore  Cargo.toml  README.md  toast.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: release.yml  rust-check.yml
src/: catchers.rs  config.rs  main.rs  utils.rs
src/db/: cache.rs  fs.rs  mod.rs  operations.rs  utils.rs
src/guards/: auth.rs
src/routes/: mod.rs  rest.rs  root.rs
