[package]
name = "restful-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91e3b43" }
# Auth dependencies
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
# CLI
clap ={ version = "3.1.5", features = ["derive"] }