[package]
name = "restful-db"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91e3b43", features = ["json"] }
# Auth dependencies
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
# CLI (No longer using but, just commented out for future use :P)
# clap ={ version = "3.1.5", features = ["derive"] }
# Serde Serilization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# Static Variables
lazy_static = "1.4.0"
# Base64 Encoding / Decoding
base64 = "0.13.0"